# BigOBlue

./: CMakeLists.txt  aish_and_xor  eko  gukiz  main.cpp
aish_and_xor.dSYM/Contents/: Info.plist
aish_and_xor.dSYM/Contents/Resources/DWARF/: aish_and_xor
aish_and_xor.dSYM/Contents/Resources/Relocations/aarch64/: aish_and_xor.yml
blue/: devu
blue/class1_dynamic-array/: README.md
blue/class1_dynamic-array/array/: array.cpp
blue/class1_dynamic-array/bear_and_game/: bear_and_game.cpp
blue/class1_dynamic-array/fashion_in_berland/: fashion_in_berland.cpp
blue/class1_dynamic-array/night_at_museum/: night_at_museum.cpp
blue/class1_dynamic-array/segment/: segment.cpp
blue/class1_dynamic-array/test/: test.cpp  test.h
blue/class2_big-o/: alice_bob_chocolate.cpp  approx_const.cpp  array.cpp  book.cpp  george_and_round.cpp  sereja_dima.cpp  vest.cpp
blue/class3_sorting/: chores.cpp  devu.cpp
blue/class6_DFS/: bishu_gf.cpp
blue/class7_heap/: add_all.cpp
blue/class_11_floyd_warshall/: possible_friend.cpp  prof_miguel.cpp
blue/class_12_binary_search/: eko.cpp  energy.cpp  pizza_mania.cpp  where_marble.cpp
blue/class_8_dijkstra/: mice_and_maze.cpp  traffic_network.cpp  travelling_cost.cpp
blue/devu.dSYM/Contents/: Info.plist
blue/devu.dSYM/Contents/Resources/DWARF/: devu
blue/devu.dSYM/Contents/Resources/Relocations/aarch64/: devu.yml
blue/gukiz.dSYM/Contents/Resources/Relocations/aarch64/: gukiz.yml
blue/suffix_structure/: suffix_structure.cpp
class1_dynamic-array/password/: password.cpp
class1_dynamic-array/vitaly_string/: vitaly_string.cpp
class2_big-o/: wrath.cpp
class3_BFS/: shortest_reach.cpp
class3_sorting/: gukiz.cpp  pasha.cpp  sort_array.cpp
class7_heap/: monk_and_multiplication.cpp  promotion.cpp  qheap1.cpp  roy_trending.cpp
class_10_bellman_ford/: extended_traffic.cpp  wormholes.cpp  xyzzy.cpp
class_11_floyd_warshall/: asterix.cpp  greg_graph.cpp  possible_friend.cpp
class_8_dijkstra/: traffic_network.cpp  travelling_cost.cpp
eko.dSYM/Contents/: Info.plist
eko.dSYM/Contents/Resources/DWARF/: eko
eko.dSYM/Contents/Resources/Relocations/aarch64/: eko.yml
gukiz.dSYM/Contents/: Info.plist
gukiz.dSYM/Contents/Resources/DWARF/: gukiz
orange/class1_toposort/: beverages.cpp  evil_book.cpp  fox_and_name.cpp  hierachy.cpp  king_path.cpp  topo_sort.cpp
orange/class2_bitmask/: aish_and_xor.cpp  mattey_multiply.cpp  samu_birthday.cpp  sansa_and_xor.cpp
orange/class3_backtracking/: boggle_game.cpp  combination.cpp  digger_octave.cpp  hamming_distance.cpp  lotto.cpp  n-queen.cpp  string_permutation.cpp  string_permutation_duplicate.cpp
orange/class4_divide_and_conquer/: closest_pair_of_points.cpp  max_subarr_sum.cpp  painting_fence.cpp
orange/class_10_dynamic_programming/: b_land_gold.cpp  coin_change.cpp  fibonacci.cpp  ingen_cube.cpp  k_base_number.cpp  philosofer.cpp  stair_case.cpp
orange/class_11_dynamic_programming_lcs/: lcs.cpp
orange/class_12_dynamic_programming_lis/: beautiful_people.cpp  counting_bits.cpp  lis.cpp  pascal_triangle.cpp  power_of_babylon.cpp  testing_catcher.cpp  wavio.cpp
orange/class_13_dynamic_programming_knapsack/: balo.cpp  multiple_balo.cpp  polo_penguin.cpp
