cmake_minimum_required(VERSION 3.30)
project(BigOBlue)

set(CMAKE_CXX_STANDARD 20)

add_executable(class1_test blue/class1_dynamic-array/test/test.cpp
        blue/class1_dynamic-array/test/test.h
        blue/class1_dynamic-array/fashion_in_berland/fashion_in_berland.cpp)

add_executable(class1_fashion_in_berlan blue/class1_dynamic-array/fashion_in_berland/fashion_in_berland.cpp)
add_executable(class1_night_at_museum blue/class1_dynamic-array/night_at_museum/night_at_museum.cpp)
add_executable(class1_vitaly_string blue/class1_dynamic-array/vitaly_string/vitaly_string.cpp)
add_executable(class1_segment blue/class1_dynamic-array/segment/segment.cpp)
add_executable(class1_password blue/class1_dynamic-array/password/password.cpp)
add_executable(class1_suffix_structure blue/suffix_structure/suffix_structure.cpp)
add_executable(class2_array blue/class2_big-o/array.cpp)
add_executable(class2_george_and_round blue/class2_big-o/george_and_round.cpp)
add_executable(class2_v blue/class2_big-o/book.cpp)
add_executable(class2_vest blue/class2_big-o/vest.cpp)
add_executable(class2_sereja_dima blue/class2_big-o/sereja_dima.cpp)
add_executable(class2_approx_const blue/class2_big-o/approx_const.cpp)
add_executable(class2_wrath blue/class2_big-o/wrath.cpp)
add_executable(class2_alice_bob_chocolate blue/class2_big-o/alice_bob_chocolate.cpp)
add_executable(class3_devu blue/class3_sorting/devu.cpp)
add_executable(class3_chores blue/class3_sorting/chores.cpp)
add_executable(class3_sort_array blue/class3_sorting/sort_array.cpp)
add_executable(class3_gukiz blue/class3_sorting/gukiz.cpp)
add_executable(class3_pasha blue/class3_sorting/pasha.cpp)
add_executable(class5_shortest_reach blue/class5_BFS/shortest_reach.cpp)
add_executable(class6_bishu_gf blue/class6_DFS/bishu_gf.cpp)
add_executable(class7_monk_and_multiplication blue/class7_heap/monk_and_multiplication.cpp)
add_executable(class7_qheap1 blue/class7_heap/qheap1.cpp)
add_executable(class7_add_all blue/class7_heap/add_all.cpp)
add_executable(class7_roy_trending blue/class7_heap/roy_trending.cpp)
add_executable(class7_promotion blue/class7_heap/promotion.cpp)
add_executable(class8_travelling_cost blue/class_8_dijkstra/travelling_cost.cpp)
add_executable(class8_mice_and_maze blue/class_8_dijkstra/mice_and_maze.cpp)
add_executable(class8_traffic_network blue/class_8_dijkstra/traffic_network.cpp)
add_executable(class10_wormholes blue/class_10_bellman_ford/wormholes.cpp)
add_executable(class10_extended_traffic blue/class_10_bellman_ford/extended_traffic.cpp)
add_executable(class10_xyzzy blue/class_10_bellman_ford/xyzzy.cpp)
add_executable(class11_possible_friend blue/class_11_floyd_warshall/possible_friend.cpp)
add_executable(class11_prof_miguel blue/class_11_floyd_warshall/prof_miguel.cpp)
add_executable(class11_asterix blue/class_11_floyd_warshall/asterix.cpp)
add_executable(class11_greg_graph blue/class_11_floyd_warshall/greg_graph.cpp)
add_executable(class12_where_marble blue/class_12_binary_search/where_marble.cpp)
add_executable(class12_pizza_mania blue/class_12_binary_search/pizza_mania.cpp)
add_executable(class12_eko blue/class_12_binary_search/eko.cpp)
add_executable(class12_energy blue/class_12_binary_search/energy.cpp)
add_executable(or_class1_toposort orange/class1_toposort/topo_sort.cpp)
add_executable(or_class1_hierachy orange/class1_toposort/hierachy.cpp)
add_executable(or_class1_fox_and_name orange/class1_toposort/fox_and_name.cpp)
add_executable(or_class1_king_path orange/class1_toposort/king_path.cpp)
add_executable(or_class1_beverages orange/class1_toposort/beverages.cpp)
add_executable(or_class1_evil_book orange/class1_toposort/evil_book.cpp)
add_executable(or_class2_mattey_multiply orange/class2_bitmask/mattey_multiply.cpp)
add_executable(or_class2_aish_and_xor orange/class2_bitmask/mattey_multiply.cpp)
add_executable(or_class2_samu_birthday orange/class2_bitmask/samu_birthday.cpp)
add_executable(or_class2_sansa_and_xor orange/class2_bitmask/sansa_and_xor.cpp)
add_executable(or_class3_n_queen orange/class3_backtracking/n-queen.cpp)
add_executable(or_class3_string_permutation orange/class3_backtracking/string_permutation.cpp)
add_executable(or_class3_string_permutation_duplicate orange/class3_backtracking/string_permutation_duplicate.cpp)
add_executable(or_class3_combination orange/class3_backtracking/combination.cpp)
add_executable(or_class3_lotto orange/class3_backtracking/lotto.cpp)
add_executable(or_class3_hamming_distance orange/class3_backtracking/hamming_distance.cpp)
add_executable(or_class3_digger_octave orange/class3_backtracking/digger_octave.cpp)
add_executable(or_class3_boggle_game orange/class3_backtracking/boggle_game.cpp)
add_executable(or_class4_closest_pair_of_points orange/class4_divide_and_conquer/closest_pair_of_points.cpp
        orange/class4_divide_and_conquer/painting_fence.cpp)
add_executable(or_class4_max_subarr_sum orange/class4_divide_and_conquer/max_subarr_sum.cpp)
add_executable(or_class10_fibonacci orange/class_10_dynamic_programming/fibonacci.cpp)
add_executable(or_class10_stair_case orange/class_10_dynamic_programming/stair_case.cpp)